namespaces/live.cloud-platform.service.justice.gov.uk/hmpps-pfs-web-analytics-prod/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "hmpps-pfs-web-analytics-prod"
  labels:
    cloud-platform.justice.gov.uk/is-production: "true"
    cloud-platform.justice.gov.uk/environment-name: "prod"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HMPPS"
    cloud-platform.justice.gov.uk/slack-channel: "ask_prisoner_facing_services"
    cloud-platform.justice.gov.uk/application: "HMPPS PFS Web Analytics"
    cloud-platform.justice.gov.uk/owner: "Prisoner Facing Services: thehub@digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/hmpps-pfs-web-analytics.git"
    cloud-platform.justice.gov.uk/team-name: "hmpps-launchpad-devs"
    cloud-platform.justice.gov.uk/review-after: ""
